@@ -13,12 +13,12 @@
         Hosted By:<br/>
         <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=23523&amp;type=1" width="88" height="31" alt="SourceForge"/></a>
     </div>
-    <img alt="CruiseControl" src="banner.png"/>
+    <div class="logo"><img alt="CruiseControl" src="banner.png"/></div>
 </div>
 <div class="container">&nbsp;
     <div id="menu">
     	<ul id="menulist">
-            <li><p id="menuselected">home</p></li>
+            <li class="top"><p id="menuselected">home</p></li>
             <li><a href="download.html">download</a></li>
             <li><a href="license.html">license</a></li>
             <li><h2>documentation</h2></li>
@@ -33,7 +33,7 @@
             <li><a class="expandmenu" href="developers.html">developers</a></li>
             <li><a href="contact.html">mailing lists</a></li>
             <li><a href="svn.html">source repository</a></li>
-            <li><p id="menubottom">Release: %%VERSION%%</p></li>
+            <li><p>Release: %%VERSION%%</p></li>
         </ul>
     </div>
     <div class="content">
@@ -58,7 +58,7 @@
         Integration</a> by Martin Fowler and Matthew Foemmel.</p>
 
         <p>An important part of any software development process is getting
-        reliable builds of the software. Despite it's importance, we are often
+        reliable builds of the software. Despite its importance, we are often
         surprised when this isn't done. We stress a fully automated and
         reproducible build, including testing, that runs many times a day. This
         allows each developer to integrate daily thus reducing integration
