@@ -13,12 +13,12 @@
         Hosted By:<br/>
         <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=23523&amp;type=1" width="88" height="31" alt="SourceForge"/></a>
     </div>
-    <img alt="CruiseControl" src="banner.png"/>
+    <div class="logo"><img alt="CruiseControl" src="banner.png"/></div>
 </div>
 <div class="container">&nbsp;
     <div id="menu">
         <ul id="menulist">
-            <li><a href="index.html">home</a></li>
+            <li class="top"><a href="index.html">home</a></li>
             <li><a href="download.html">download</a></li>
             <li><p id="menuselected">license</p></li>
             <li><h2>documentation</h2></li>
